--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         "php": ">=5.4",
         "gabordemooij/redbean": "v4.3",
         "electrolinux/phpquery": "0.9.6",
-        "rmccue/requests": "^1.6"
+        "rmccue/requests": "1.6.1"
     },
     "autoload": {
         "psr-4": {
-            "spider\\" : "spider"
+            "spider\\" : "spider/"
         }
     }
 }
